[package]
name = "immich-save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paris = { version = "1.5", features = ["no_logger", "macros"] }
anyhow = "1.0.81"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.30"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"
console = "0.15.8"
clap = { version = "4.5.3", features = ["derive"] }
